# op_performance_test

./: CMakeLists.txt  main.c  readme.md  seagull_op.c
include/: seagull_op.h
include/op/: add.h  div.h  gemm.h  lrelu.h  max.h  min.h  mul.h  prelu.h  sigmoid.h  sub.h
include/xnnpack/: common.h
op/: add.c  div.c  gemm.c  lrelu.c  max.c  min.c  mul.c  prelu.c  sigmoid.c  sub.c
